Port deploy scripts from Illumos to Ubuntu